added bandcamp link

--- a/music.html
+++ b/music.html
@@ -51,6 +51,7 @@
       <a href="https://open.spotify.com/artist/2Bexl9uDDLnCoiMDOmIsPt" style="margin:0 0.5rem;" target="_blank"><img src="images/social/spoofywhite.svg" width="35" height="35"></a>
       <a href="https://music.apple.com/us/artist/itsy-bitsy/1785684575" style="margin:0 0.5rem;" target="_blank"><img src="images/social/appelwhite.svg" width="35" height="35"></a>
       <a href="https://music.youtube.com/channel/UC_iOTm87kzzN3RdAGgQNW0A?si=yxTx2JLeVtC2qHIZ" style="margin:0 0.5rem;" target="_blank"><img src="images/social/ytm.white.svg" width="35" height="35"></a>
+      <a href="https://itsy-bitsy.bandcamp.com/" style="margin:0 0.5rem;" target="_blank"><img src="images/social/bc.white.svg" width="35" height="35"></a>
      </div>
     </div>
    </div>
