made the music page more accessible

--- a/music.html
+++ b/music.html
@@ -48,10 +48,10 @@
       <img src="images/hamburg.svg" alt="Mobile menu icon" aria-label="Click to view links to Itsy Bitsy's official music profiles on Spotify, Apple Music, and more." width="25" height="25">
      </a>
      <div class="seclinksb" id="link">
-      <a href="https://open.spotify.com/artist/2Bexl9uDDLnCoiMDOmIsPt" style="margin:0 0.5rem;" target="_blank"><img src="images/social/spoofywhite.svg" width="35" height="35"></a>
-      <a href="https://music.apple.com/us/artist/itsy-bitsy/1785684575" style="margin:0 0.5rem;" target="_blank"><img src="images/social/appelwhite.svg" width="35" height="35"></a>
-      <a href="https://music.youtube.com/channel/UC_iOTm87kzzN3RdAGgQNW0A?si=yxTx2JLeVtC2qHIZ" style="margin:0 0.5rem;" target="_blank"><img src="images/social/ytm.white.svg" width="35" height="35"></a>
-      <a href="https://itsy-bitsy.bandcamp.com/" style="margin:0 0.5rem;display:none;" target="_blank"><img src="images/social/bc.white.svg" width="35" height="35"></a>
+      <a href="https://open.spotify.com/artist/2Bexl9uDDLnCoiMDOmIsPt" style="margin:0 0.5rem;" target="_blank" aria-label="Click to visit Itsy Bitsy's Spotify page."><img src="images/social/spoofywhite.svg" alt="Spotify logo" width="35" height="35"></a>
+      <a href="https://music.apple.com/us/artist/itsy-bitsy/1785684575" style="margin:0 0.5rem;" target="_blank" aria-label="Click to visit Itsy Bitsy's Apple Music page."><img src="images/social/appelwhite.svg" alt="Apple Music logo" width="35" height="35"></a>
+      <a href="https://music.youtube.com/channel/UC_iOTm87kzzN3RdAGgQNW0A?si=yxTx2JLeVtC2qHIZ" style="margin:0 0.5rem;" target="_blank" aria-label="Click to visit Itsy Bitsy's YouTube Music page."><img src="images/social/ytm.white.svg" alt="YouTube Music logo" width="35" height="35"></a>
+      <a href="https://itsy-bitsy.bandcamp.com/" style="margin:0 0.5rem;display:none;" target="_blank" aria-label="Click to visit Itsy Bitsy's Bandcamp page."><img src="images/social/bc.white.svg" alt="Bandcamp logo" width="35" height="35"></a>
      </div>
     </div>
    </div>
