updated shows.html for january show

--- a/shows.html
+++ b/shows.html
@@ -46,13 +46,13 @@
   <section style="background-color:#1C1C1C;">
    <div class="container" style="padding-bottom:0;">
     <div class="header">
-     <h1 style="color:white;font-family:sans-serif;font-size:25px;">Itsy Bitsy's Next Show</h1>
-     <h2 style="color:white;font-family:sans-serif;font-size:16px;"><br>- Date: TBA -</h2>
+     <h1 style="color:white;font-family:sans-serif;font-size:25px;">Itsy Bitsy, Live at The Hive</h1>
+     <h2 style="color:white;font-family:sans-serif;font-size:16px;"><br>- Date: January 11th, 2025 -</h2>
     </div>
     <div class="poster-container" style="align-self:center;display:inline-block;">
-     <a target="_blank" href="images/showposters/placeholder.webp">
+     <a target="_blank" href="images/showposters/itsyhive.webp">
      <picture>
-      <img src="images/showposters/placeholder.webp" width="1280" height="1515" alt="Placeholder image for the poster on the "Shows" page">
+      <img src="images/showposters/itsyhive.webp" width="1440" height="1438" alt="Promotional image for Itsy Bitsy's upcoming show at The Hive in Boise, Idaho on January 11th, 2025.">
      </picture>
      </a>
     </div>
@@ -63,9 +63,9 @@
      <img src="images/blushlogo.svg" alt="Blush logo" style="width:50%;height:auto;">
     </div>
    </div>
-   <div class="container" style="justify-content:center;align-items:center;display:none;">
-    <a href="https://www.google.com/maps/place/folks/@43.621995,-116.220756,16z/data=!4m6!3m5!1s0x54aef9ee058c3aed:0x84036d7f11826069!8m2!3d43.6219949!4d-116.2207557!16s%2Fg%2F11v5c1rw5t?hl=en&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D" style="text-decoration:none;" aria-label="Link to the Google Maps location of Itsy Bitsy's upcoming show." target="_blank">
-     <button class="soc" aria-label="Click to view the location of Itsy Bitsy's next show">
+   <div class="container" style="justify-content:center;align-items:center;display:flex;">
+    <a href="https://maps.app.goo.gl/yGhpuNmQpyQiFZoL6" style="text-decoration:none;" aria-label="Link to the Google Maps location of Itsy Bitsy's upcoming show." target="_blank">
+     <button class="soc" aria-label="Click to view the location of Itsy Bitsy's next show.">
       <img src="images/shows/venueicon.svg" style="width:90px;height:60px;margin:auto;" alt="Venue icon">
      </button>
     </a>
