--- a/music.html
+++ b/music.html
@@ -77,7 +77,7 @@
    <div class="image-container">
     <a href="https://distrokid.com/hyperfollow/itsybitsy/itsy-bitsy" style="text-decoration:none;" target="_blank">
     <picture>
-     <img src="images/covers/ep.webp" width="3744" height="3744" alt="The cover art for Itsy Bitsy's self-titled debut EP.">
+     <img src="images/covers/ep.webp" width="3744" height="3744" alt="The cover art for Itsy Bitsy's self-titled debut EP, which released on December 21, 2024. Art by Tovi Chance.">
     </picture>
     <h2 style="color:white;font-family:sans-serif;display:inline;"><i>Itsy Bitsy</i> [EP]</h2>
    </a>
