--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -3,26 +3,26 @@
 <html lang="en">
  <head>
   <title>Itsy Bitsy [EP] | Itsy Bitsy</title>
-  <link rel="canonical" href="https://itsybitsyband.com/music/itsy-bitsy-ep">
-  <meta name="description" content="See details about Itsy Bitsy's eponymous debut EP. The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
+  <link rel="canonical" href="https://itsybitsyband.com/music/itsybitsyep">
+  <meta name="description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <link rel="stylesheet" href="release.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   
-  <meta property="og:url" content="https://itsybitsyband.com/music/itsy-bitsy-ep">
+  <meta property="og:url" content="https://itsybitsyband.com/music/itsybitsyep">
   <meta property="og:type" content="website">
   <meta property="og:image" content="../images/og/itsybitsyshar2.png">
   <meta property="og:title" content="Itsy Bitsy [EP] | Itsy Bitsy">
-  <meta property="og:description" content="See details about Itsy Bitsy's eponymous debut EP. The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta property="og:description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="itsybitsyband.com">
-  <meta property="twitter:url" content="https://itsybitsyband.com/music/itsy-bitsy-ep">
+  <meta property="twitter:url" content="https://itsybitsyband.com/music/itsybitsyep">
   <meta name="twitter:title" content="Itsy Bitsy [EP] | Itsy Bitsy">
   <meta property="twitter:site" content="@ItsyTweetsy">
-  <meta name="twitter:description" content="See details about Itsy Bitsy's eponymous debut EP. The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta name="twitter:description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
   <meta name="twitter:image" content="../images/og/itsybitsyshar2.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="../images/fstuff/apple-touch-icon.png">
@@ -45,39 +45,59 @@
      <img src="../images/covers/ep.webp" width="3744" height="3744" alt="The cover art for Itsy Bitsy's eponymous debut EP, which released on December 21, 2024. Art by Tovi Chance.">
     </picture>
    </div>
+   <div class="text">
    <div class="tracklist">
-    <table>
+    <table style="width:100%;">
      <tr>
-      <th style="opacity: 0.0">No.</th>
-      <th style="text-align:left;">Song</th>
-      <th style="text-align:right;">Runtime:</th>
+      <th style="text-align:left;width:85%;display:none;">Song Title</th>
+      <th style="text-align:right;width:15%;display:none;">Runtime</th>
      </tr>
      <tr>
-      <td>1.</td>
-      <td>Forget Me Not</td>
+      <td>1. Forget Me Not</td>
       <td style="text-align:right;">3:02</td>
      </tr>
      <tr>
-      <td>2.</td>
-      <td>Sundance Kid</td>
+      <td>2. Sundance Kid</td>
       <td style="text-align:right;">5:40</td>
      </tr>
      <tr>
-      <td>3.</td>
-      <td>Heavy</td>
+      <td>3. Heavy</td>
       <td style="text-align:right;">5:02</td>
      </tr>
      <tr>
-      <td>4.</td>
-      <td>Dreams As Prey</td>
+      <td>4. Dreams As Prey</td>
       <td style="text-align:right;">4:21</th>
      </tr>
      <tr>
-      <td>5.</td>
-      <td>Worm Icon You</td>
+      <td>5. Worm Icon You</td>
       <td style="text-align:right;">2:07</td>
      </tr>
     </table>
+   </div>
+   <div class="listenbar">
+    <ul>
+     <li>
+      <a href="https://open.spotify.com/album/4vV3tI6a1f5DA8lmtCwMie?si=RSvKHWHqRAuH2Ef2RhHn-g" target="_blank">
+       <img src="../images/social/spoofywhite.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="Spotify icon">
+      </a>
+     </li>
+     <li>
+      <a href="https://geo.music.apple.com/us/album/itsy-bitsy-ep/1786083162" target="_blank">
+       <img src="../images/social/appelwhite.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="Apple Music icon">
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/playlist?list=OLAK5uy_kmhcpxdYyr23LlGjGjpI1UuYwfc5MIIPU" target="_blank">
+       <img src="../images/social/yt.white.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="YouTube icon">
+      </a>
+     </li>
+     <li>
+      <a href="https://itsy-bitsy.bandcamp.com/album/itsy-bitsy" target="_blank">
+       <img src="../images/social/bc.white.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="Bandcamp icon">
+      </a>
+     </li>
+    </ul>
+   </div>
    </div>
   </div>
  </body>
