official release of ep page

--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -39,6 +39,9 @@
     <a href=".././music" style="font-family:sans-serif;color:#f2f2f2;text-decoration:none;font-size:24px;"><b>← BACK</b></a>
    </div>
   </div>
+  <div class="headert">
+   <h1><i>Itsy Bitsy</i> [EP]</h1>
+  </div>
   <div class="content-container">
    <div class="cover">
     <picture>
@@ -53,8 +56,8 @@
       <th style="text-align:right;width:15%;display:none;">Runtime</th>
      </tr>
      <tr>
-      <td>1. Forget Me Not</td>
-      <td style="text-align:right;">3:02</td>
+      <td style="padding-top:0;">1. Forget Me Not</td>
+      <td style="text-align:right;padding-top:0;">3:02</td>
      </tr>
      <tr>
       <td>2. Sundance Kid</td>
@@ -89,6 +92,11 @@
      <li>
       <a href="https://www.youtube.com/playlist?list=OLAK5uy_kmhcpxdYyr23LlGjGjpI1UuYwfc5MIIPU" target="_blank">
        <img src="../images/social/yt.white.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="YouTube icon">
+      </a>
+     </li>
+     <li>
+      <a href="https://music.youtube.com/playlist?list=OLAK5uy_k4cH2uqcIg_JC4i-0t8sfO045wwh09ixQ&si=8oalbR_6mhdfs46x" target="_blank">
+       <img src="../images/social/ytm.white.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="YouTube Music icon">
       </a>
      </li>
      <li>
