whoops forgot to edit xml

--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -13,7 +13,7 @@
   
   <meta property="og:url" content="https://itsybitsyband.com/music/itsybitsyep">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="../images/og/itsybitsyshar2.png">
+  <meta property="og:image" content="../images/covers/ep.webp">
   <meta property="og:title" content="Itsy Bitsy [EP] | Itsy Bitsy">
   <meta property="og:description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
 
@@ -23,7 +23,7 @@
   <meta name="twitter:title" content="Itsy Bitsy [EP] | Itsy Bitsy">
   <meta property="twitter:site" content="@ItsyTweetsy">
   <meta name="twitter:description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
-  <meta name="twitter:image" content="../images/og/itsybitsyshar2.png">
+  <meta name="twitter:image" content="../images/covers/ep.webp">
 
   <link rel="apple-touch-icon" sizes="180x180" href="../images/fstuff/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../images/fstuff/favicon-32x32.png">
