gotta have that copyright in there

--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -108,5 +108,8 @@
    </div>
    </div>
   </div>
+  <div class="footer">
+   <p style="color:white;font-size:12px;font-family:Verdana,sans-serif;" class="bottomright">©2024 Itsy Bitsy.</p>
+  </div>
  </body>
 </html>
