--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -4,10 +4,10 @@
  <head>
   <title>Itsy Bitsy [EP] | Itsy Bitsy</title>
   <link rel="canonical" href="https://itsybitsyband.com/music/itsybitsyep">
-  <meta name="description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
+  <meta name="description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. This EP features tracks "Forget Me Not", "Sundance Kid", "Heavy", "Dreams As Prey", and "Worm Icon You". The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <link rel="stylesheet" href="release.css">
   <meta name="googlebot" content="notranslate">
-  <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
+  <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, Itsy Bitsy music, Itsy Bitsy members, Itsy Bitsy EP, EP, Forget Me Not, Sundance Kid, Heavy, Dreams As Prey, Worm Icon You, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   
@@ -15,14 +15,14 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="../images/covers/ep.webp">
   <meta property="og:title" content="Itsy Bitsy [EP] | Itsy Bitsy">
-  <meta property="og:description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta property="og:description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. This EP features tracks "Forget Me Not", "Sundance Kid", "Heavy", "Dreams As Prey", and "Worm Icon You". The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="itsybitsyband.com">
   <meta property="twitter:url" content="https://itsybitsyband.com/music/itsybitsyep">
   <meta name="twitter:title" content="Itsy Bitsy [EP] | Itsy Bitsy">
   <meta property="twitter:site" content="@ItsyTweetsy">
-  <meta name="twitter:description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta name="twitter:description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. This EP features tracks "Forget Me Not", "Sundance Kid", "Heavy", "Dreams As Prey", and "Worm Icon You". The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <meta name="twitter:image" content="../images/covers/ep.webp">
 
   <link rel="apple-touch-icon" sizes="180x180" href="../images/fstuff/apple-touch-icon.png">
