meta description change

--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
  <head>
   <title>Gallery | Itsy Bitsy</title>
   <link rel="canonical" href="https://itsybitsyband.com/gallery">
-  <meta name="description" content="The official website for photos of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta name="description" content="The official website for pictures, posters, and videos of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <link rel="stylesheet" href="gallery.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, itsy bitsy photos, pictures, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
@@ -15,14 +15,14 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/og/galleryshar.png">
   <meta property="og:title" content="Gallery | Itsy Bitsy">
-  <meta property="og:description" content="The official website for photos of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta property="og:description" content="The official website for pictures, posters, and videos of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="itsybitsyband.com/gallery">
   <meta property="twitter:url" content="https://itsybitsyband.com/gallery">
   <meta name="twitter:title" content="Gallery | Itsy Bitsy">
   <meta property="twitter:site" content="@ItsyTweetsy">
-  <meta name="twitter:description" content="The official website for photos of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta name="twitter:description" content="The official website for pictures, posters, and videos of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <meta name="twitter:image" content="images/og/galleryshar.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
