--- a/shows.html
+++ b/shows.html
@@ -4,7 +4,7 @@
  <head>
   <title>Shows | Itsy Bitsy</title>
   <link rel="canonical" href="https://itsybitsyband.com/shows">
-  <meta name="description" content="See details about Itsy Bitsy's upcoming shows! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta name="description" content="See details about Itsy Bitsy's upcoming shows! The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <link rel="stylesheet" href="shows.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, band, rock, alternative, dream pop, noise rock, shoegaze, Boise">
@@ -15,14 +15,14 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/og/showshar.png">
   <meta property="og:title" content="Shows | Itsy Bitsy">
-  <meta property="og:description" content="See details about Itsy Bitsy's upcoming shows! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta property="og:description" content="See details about Itsy Bitsy's upcoming shows! The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="itsybitsyband.com/shows">
   <meta property="twitter:url" content="https://itsybitsyband.com/shows">
   <meta name="twitter:title" content="Shows | Itsy Bitsy">
   <meta property="twitter:site" content="@ItsyTweetsy">
-  <meta name="twitter:description" content="See details about Itsy Bitsy's upcoming shows! The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta name="twitter:description" content="See details about Itsy Bitsy's upcoming shows! The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <meta name="twitter:image" content="images/og/showshar.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
