--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -49,11 +49,13 @@
     </picture>
    </div>
    <div class="text">
+  <section>
+   <h2 style="color:white;font-family:Verdana,sans-serif;padding-bottom:1rem;">Tracklist:</h2>
    <div class="tracklist">
     <table style="width:100%;">
      <tr>
-      <th style="text-align:left;width:85%;display:none;">Song Title</th>
-      <th style="text-align:right;width:15%;display:none;">Runtime</th>
+      <th style="text-align:left;width:85%;display:none;">Track:</th>
+      <th style="text-align:right;width:15%;display:none;">Runtime:</th>
      </tr>
      <tr>
       <td style="padding-top:0;">1. Forget Me Not</td>
@@ -77,9 +79,12 @@
      </tr>
     </table>
    </div>
+  </section>
+  <section style="padding:1rem 0;border-top:2px solid white;border-bottom:2px solid white;">
+   <h2 style="color:white;font-family:Verdana,sans-serif;padding-top:0.5rem;">Listen:</h2>
    <div class="listenbar">
     <ul>
-     <li>
+     <li style="margin-left:0;">
       <a href="https://open.spotify.com/album/4vV3tI6a1f5DA8lmtCwMie?si=RSvKHWHqRAuH2Ef2RhHn-g" target="_blank">
        <img src="../images/social/spoofywhite.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="Spotify icon">
       </a>
@@ -99,13 +104,26 @@
        <img src="../images/social/ytm.white.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="YouTube Music icon">
       </a>
      </li>
-     <li>
+     <li style="margin-right:0;">
       <a href="https://itsy-bitsy.bandcamp.com/album/itsy-bitsy" target="_blank">
        <img src="../images/social/bc.white.svg" style="width:37.5px;height:37.5px;margin:auto;" alt="Bandcamp icon">
       </a>
      </li>
     </ul>
    </div>
+   </section>
+   <section>
+    <h2 style="color:white;font-family:Verdana,sans-serif;padding-top:1.5rem;">Details:</h2>
+    <p style="color:white;font-family:Verdana,sans-serif;"><br>Released: December 21, 2024.<br><br>
+<b>Tovi Chance</b>: lead vocals, lyrics<br>
+<b>Lilly Furlow</b>: guitar, backing vocals (tracks 1-3), lyrics (tracks 1, 3, 5), lead vocals (track 3)<br>
+<b>Maz Della Badia</b>: guitar, synthesizer (track 2), backing vocals (track 4)<br>
+<b>Jack Tiderman</b>: bass guitar<br>
+<b>Brian Dyer</b>: drums<br>
+<b>Regan Ybarra</b>: lyrics (track 1)<br><br>
+
+Recorded, mixed, and mastered by <b>Jesse Blake Rundle</b> at Mixed Metaphor Recording Studio.</p>
+   </section>
    </div>
   </div>
   <div class="footer">
