--- a/gallery.html
+++ b/gallery.html
@@ -82,14 +82,14 @@
      <source media="(max-width:1000px)" srcset="images/band/responsive/9-1000w.webp">
      <source media="(max-width:1200px)" srcset="images/band/responsive/9-1200w.webp">
      <source media="(max-width:1600px)" srcset="images/band/responsive/9-1600w.webp">
-     <img src="images/band/9.webp" width="2048" height="1536" alt="Image of Itsy Bitsy standing in the middle of a street in Boise, Idaho. From left to right: Tovi Chance, Lilly Furlow, Brian Dyer, Jack Tiderman, Maz Della Badia.">
+     <img src="images/band/9.webp" width="2048" height="1536" alt="Image of Itsy Bitsy standing in the middle of a street in Boise, Idaho. From left to right: Tovi Chance, Lilly Furlow, Brian Dyer, Jack Tiderman, Maz Della Badia. Taken on November 6, 2024.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/12-400w.webp">
      <source media="(max-width:600px)" srcset="images/band/responsive/12-600w.webp">
      <source media="(max-width:800px)" srcset="images/band/responsive/12-800w.webp">
      <source media="(max-width:1000px)" srcset="images/band/responsive/12-1000w.webp">
-     <img src="images/band/12.webp" width="1253" height="1253" alt="Image of the heads of Itsy Bitsy in a circle. Clockwise from top: Tovi Chance, Brian Dyer, Maz Della Badia, Jack Tiderman, Lilly Furlow.">
+     <img src="images/band/12.webp" width="1253" height="1253" alt="Image of the heads of Itsy Bitsy in a circle. Clockwise from top: Tovi Chance, Brian Dyer, Maz Della Badia, Jack Tiderman, Lilly Furlow. Taken on November 6, 2024.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/4-400w.webp">
@@ -104,7 +104,7 @@
      <source media="(max-width:400px)" srcset="images/band/responsive/11-400w.webp">
      <source media="(max-width:600px)" srcset="images/band/responsive/11-600w.webp">
      <source media="(max-width:800px)" srcset="images/band/responsive/11-800w.webp">
-     <img src="images/band/11.webp" width="1099" height="1099" alt="Image of Itsy Bitsy sitting down by a wall in a shopping center in Boise, Idaho. From left to right: Jack Tiderman, Tovi Chance, Lilly Furlow, Maz Della Badia, Brian Dyer.">
+     <img src="images/band/11.webp" width="1099" height="1099" alt="Image of Itsy Bitsy sitting down by a wall in a shopping center in Boise, Idaho. From left to right: Jack Tiderman, Tovi Chance, Lilly Furlow, Maz Della Badia, Brian Dyer. Taken on November 6, 2024.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/8-400w.webp">
@@ -141,7 +141,7 @@
      <source media="(max-width:1000px)" srcset="images/band/responsive/10-1000w.webp">
      <source media="(max-width:1200px)" srcset="images/band/responsive/10-1200w.webp">
      <source media="(max-width:1600px)" srcset="images/band/responsive/10-1600w.webp">
-     <img src="images/band/10.webp" loading="lazy" width="1852" height="1125" alt="Head-on shot image of Itsy Bitsy sitting down by a wall in a shopping center in Boise, Idaho. From left to right: Jack Tiderman, Tovi Chance, Lilly Furlow, Maz Della Badia, Brian Dyer.">
+     <img src="images/band/10.webp" loading="lazy" width="1852" height="1125" alt="Head-on shot image of Itsy Bitsy sitting down by a wall in a shopping center in Boise, Idaho. From left to right: Jack Tiderman, Tovi Chance, Lilly Furlow, Maz Della Badia, Brian Dyer. Taken on November 6, 2024.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/14-400w.webp">
@@ -150,7 +150,7 @@
      <source media="(max-width:1000px)" srcset="images/band/responsive/14-1000w.webp">
      <source media="(max-width:1200px)" srcset="images/band/responsive/14-1200w.webp">
      <source media="(max-width:1600px)" srcset="images/band/responsive/14-1600w.webp">
-     <img src="images/band/14.webp" loading="lazy" width="2048" height="1536" alt="Image of Itsy Bitsy playing at Folks candle shopin Boise, Idaho on November 10th, 2023. From left to right: Brian Dyer playing drums, Lilly Furlow playing guitar, Tovi Chance holding a microphone, Jack Tiderman playing bass, and Maz Della Badia playing guitar.">
+     <img src="images/band/14.webp" loading="lazy" width="2048" height="1536" alt="Image of Itsy Bitsy playing at Folks candle shop in Boise, Idaho on November 10th, 2023. From left to right: Brian Dyer playing drums, Lilly Furlow playing guitar, Tovi Chance holding a microphone, Jack Tiderman playing bass, and Maz Della Badia playing guitar.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/2-400w.webp">
