parenthesis instead of brackets

--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -2,7 +2,7 @@
 <!-- Site developed by Brian M. Dyer-->
 <html lang="en">
  <head>
-  <title>Itsy Bitsy [EP] | Itsy Bitsy</title>
+  <title>Itsy Bitsy (EP) | Itsy Bitsy</title>
   <link rel="canonical" href="https://itsybitsyband.com/music/itsybitsyep">
   <meta name="description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. This EP features tracks "Forget Me Not", "Sundance Kid", "Heavy", "Dreams As Prey", and "Worm Icon You". The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <link rel="stylesheet" href="release.css">
@@ -14,13 +14,13 @@
   <meta property="og:url" content="https://itsybitsyband.com/music/itsybitsyep">
   <meta property="og:type" content="website">
   <meta property="og:image" content="../images/covers/ep.webp">
-  <meta property="og:title" content="Itsy Bitsy [EP] | Itsy Bitsy">
+  <meta property="og:title" content="Itsy Bitsy (EP) | Itsy Bitsy">
   <meta property="og:description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. This EP features tracks "Forget Me Not", "Sundance Kid", "Heavy", "Dreams As Prey", and "Worm Icon You". The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="itsybitsyband.com">
   <meta property="twitter:url" content="https://itsybitsyband.com/music/itsybitsyep">
-  <meta name="twitter:title" content="Itsy Bitsy [EP] | Itsy Bitsy">
+  <meta name="twitter:title" content="Itsy Bitsy (EP) | Itsy Bitsy">
   <meta property="twitter:site" content="@ItsyTweetsy">
   <meta name="twitter:description" content="See details about Itsy Bitsy's eponymous debut EP, released on December 21st, 2024. This EP features tracks "Forget Me Not", "Sundance Kid", "Heavy", "Dreams As Prey", and "Worm Icon You". The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <meta name="twitter:image" content="../images/covers/ep.webp">
@@ -40,7 +40,7 @@
    </div>
   </div>
   <div class="headert">
-   <h1><i>Itsy Bitsy</i> [EP]</h1>
+   <h1><i>Itsy Bitsy</i> (EP)</h1>
   </div>
   <div class="content-container">
    <div class="cover">
@@ -51,7 +51,7 @@
    <div class="text">
   <section>
    <h2 style="color:white;font-family:Verdana,sans-serif;padding-bottom:1rem;">Tracklist:</h2>
-   <div class="tracklist">
+   <div class="tracklist" style="padding-bottom:0.5rem;">
     <table style="width:100%;">
      <tr>
       <th style="text-align:left;width:85%;display:none;">Track:</th>
@@ -114,14 +114,13 @@
    </section>
    <section>
     <h2 style="color:white;font-family:Verdana,sans-serif;padding-top:1.5rem;">Details:</h2>
-    <p style="color:white;font-family:Verdana,sans-serif;"><br>Released: December 21, 2024.<br><br>
+    <p style="color:white;font-family:Verdana,sans-serif;"><br>Release Date: December 21, 2024.<br><br>
 <b>Tovi Chance</b>: lead vocals, lyrics<br>
 <b>Lilly Furlow</b>: guitar, backing vocals (tracks 1-3), lyrics (tracks 1, 3, 5), lead vocals (track 3)<br>
 <b>Maz Della Badia</b>: guitar, synthesizer (track 2), backing vocals (track 4)<br>
 <b>Jack Tiderman</b>: bass guitar<br>
-<b>Brian Dyer</b>: drums<br>
-<b>Regan Ybarra</b>: lyrics (track 1)<br><br>
-
+<b>Brian Dyer</b>: drums<br><br>
+<b>Regan Ybarra</b>: lyrics (track 1)<br>
 Recorded, mixed, and mastered by <b>Jesse Blake Rundle</b> at Mixed Metaphor Recording Studio.</p>
    </section>
    </div>
