Updated shows page (as the hive show is over now)

--- a/shows.html
+++ b/shows.html
@@ -46,13 +46,13 @@
   <section style="background-color:#1C1C1C;">
    <div class="container" style="padding-bottom:0;">
     <div class="header">
-     <h1 style="color:white;font-family:sans-serif;font-size:25px;">Itsy Bitsy, Live at The Hive</h1>
-     <h2 style="color:white;font-family:sans-serif;font-size:16px;"><br>- Date: January 11th, 2025 -</h2>
+     <h1 style="color:white;font-family:sans-serif;font-size:25px;">Next Itsy Bitsy Show: To Be Announced</h1>
+     <h2 style="color:white;font-family:sans-serif;font-size:16px;"><br>- Date: TBA -</h2>
     </div>
     <div class="poster-container" style="align-self:center;display:inline-block;">
-     <a target="_blank" href="images/showposters/itsyhive.webp">
+     <a target="_blank" href="images/showposters/placeholder.webp">
      <picture>
-      <img src="images/showposters/itsyhive.webp" width="1440" height="1438" alt="Promotional image for Itsy Bitsy's upcoming show at The Hive in Boise, Idaho on January 11th, 2025.">
+      <img src="images/showposters/placeholder.webp" width="1440" height="1438" alt="Placeholder poster for Itsy Bitsy's "Shows" page.">
      </picture>
      </a>
     </div>
@@ -63,7 +63,7 @@
      <img src="images/blushlogo.svg" alt="Blush logo" style="width:50%;height:auto;">
     </div>
    </div>
-   <div class="container" style="justify-content:center;align-items:center;display:flex;">
+   <div class="container" style="justify-content:center;align-items:center;display:none;">
     <a href="https://maps.app.goo.gl/yGhpuNmQpyQiFZoL6" style="text-decoration:none;" aria-label="Link to the Google Maps location of Itsy Bitsy's upcoming show." target="_blank">
      <button class="soc" aria-label="Click to view the location of Itsy Bitsy's next show.">
       <img src="images/shows/venueicon.svg" style="width:90px;height:60px;margin:auto;" alt="Venue icon">
